feat: add meta tags and favicon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="src/assets/images/favicon-web-academy.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + Bootstrap</title>
+
+    <meta
+      name="keywords"
+      content="Web Academy, Curso Web Fullstack UFAM, Curso UFAM, Curso Desenvolvimento Web UFAM"
+    />
+    <meta
+      name="description"
+      content="Proposta de melhoria da página oficial do Projeto Web Academy (2023), oferecido pela UFAM."
+    />
+    <meta name="author" content="Josué Lustosa" />
+
+    <title>Web Academy</title>
   </head>
   <body>
     <div id="root"></div>
