--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="src/assets/images/favicon-web-academy.png"
+      href="./assets/images/favicon-web-academy.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -23,6 +23,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
